# Git-Management

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
src/services/: mod.rs
src/services/config/: custom.rs  github.rs  mod.rs
src/services/data_structures/: data_structures.rs  mod.rs
src/services/github/: check_names.rs  github.rs  mod.rs
tests/: github.rs
