[package]
name = "repo_maker"
version = "0.1.0"
authors = ["JoaoPedroPP <poloniponce@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
dirs = "3.0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }