[package]
name = "gitmgt"
version = "0.1.1"
authors = ["JoaoPedroPP <poloniponce@protonmail.ch>"]
edition = "2018"
description = "An easy way to create your git repository without leaving your project"
repository = "https://github.com/JoaoPedroPP/Git-Management"
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENSE"
keywords = ["cli", "git", "management"]
categories = ["command-line-utilities", "development-tools", "config"]



[dependencies]
clap = "2.33.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
dirs = "3.0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
assert_cmd = "2.0.2"